--- a/style.css
+++ b/style.css
@@ -20,3 +20,19 @@ form input {
     padding: 10px 25px;
     width: 50%;
 }
+header {
+    background: #BBBBBB;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
